Make draggable tokens easier to see when focused, ensure token container properly wraps them

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -58,6 +58,12 @@ body {
 
 .draggableCounterContainer {
   position: relative;
+  display: inline-block;
+  outline: none;
+}
+
+.draggableCounterContainer:focus > .draggableCounter {
+  outline: auto;
 }
 
 .draggableCounterCountText {
